config-root/namespaces/jx-staging/jx3-deploy-sample01/jx3-deploy-sample01-jx3-deploy-sample01-deploy.yaml
# Source: jx3-deploy-sample01/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jx3-deploy-sample01-jx3-deploy-sample01
  labels:
    draft: draft-app
    chart: "jx3-deploy-sample01-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: jx3-deploy-sample01-jx3-deploy-sample01
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: jx3-deploy-sample01-jx3-deploy-sample01
    spec:
      serviceAccountName: jx3-deploy-sample01-jx3-deploy-sample01
      containers:
        - name: jx3-deploy-sample01
          image: "10.101.161.45/bo-yoon/jx3-deploy-sample01:0.0.2"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
