config-root/namespaces/jx-staging/jx3-deploy-sample01/jx3-deploy-sample01-svc.yaml
# Source: jx3-deploy-sample01/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jx3-deploy-sample01
  labels:
    chart: "jx3-deploy-sample01-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: jx3-deploy-sample01-jx3-deploy-sample01
